# ReadabilityStudio

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Info.plist.in  LICENSE  NOTICE.md  README.md  ReadStudio.rc  SECURITY.md  app-icon.icns  app-logo.icns  citations.apa.in  citations.mla.in  licenses.md  resource.h  resource.h.in
.github/workflows/: cppcheck.yml  doxygen.yml  i18n-check.yml  mac-unit-tests.yml  msvc.yml  quneiform.yml  spell-check.yml  unit-tests.yml  windows-unit-tests.yml
Docs/Coding-Bible/: README.md  _bookdown.yml
Docs/ReadabilityStudioAPI/: README.md  _output.yml  index.Rmd
Examples/: A Christmas Carol.txt  Features.rtf  Importing and Exporting Fixed-Width Data with R.docx  README.md
Resources/: BuildRSAssets.bat  Finalize Word Lists.lua  finalize-word-lists.lua
Resources/ReportThemes/: Default.css
Resources/Scripting/: RSClasses.api  RSConstants.lua  RSEnums.api  RSLibraries.api
Resources/Words/: BaseEnglishDictionary.txt  NonPersonalBase.txt  PersonalBase.txt  base-english-dictionary.txt  base-non-personal.txt  base-personal.txt
Resources/scripting/: RSClasses.api  RSEnums.api  RSLibraries.api
Resources/words/: base-personal.txt
cmake/modules/: FindPandoc.cmake  FindR.cmake
docs/: BuildEnumFiles.R  BuildHelpProjects.R  Generate Screenshots.lua  _variables.yml.in  build-enum-files.R  build-help-projects.R  generate-screenshots.lua  version_info.txt.in
docs/Coding-Bible/: 10-CodingStyle.Rmd  20-CodeInstructions.Rmd  30-Documentation.Rmd  40-Resources.Rmd  _output.yml
docs/Projects/: 16670-8.txt  BadRaygorScore.txt  Cocoa Desserts.rsp  CookingWords.txt  Crawford Sample.txt  Features(Outlier).rsp  Features.rsp  FleschIC.rsp  Frase.rsp  GPM graph.rsp  HomeChoice.txt  LibreOffice.rsp  Termination Checklist.odt  Termination Checklist.rsp  The Frog Prince.txt  Topics2008(Improved).rsbp  Topics2008.rsbp  Topics2020ForScreenshots.rsbp  Turkey Brining.rtf  Ubuntu Desktop.rsp  license.rsp  license.rtf  turkey brining.rsp
docs/ReadabilityStudioAPI/: 01-Overview.Rmd  10-Objects.Rmd  _bookdown.yml  _output.yml  index.Rmd
docs/ReadabilityStudioDocs/: 10-CreatingANewProject.rmd  11-ReviewingStandardProjects.rmd  12-ReviewingBatchProject.rmd  13-CustomizingResults.rmd  14-Publishing.rmd  15-ProgramOptions.rmd  16-AdditionalFeatures.rmd  20-ReadabilityTestsEnglish.rmd  21-ReadabilityTestsSpanish.rmd  23-ReadabilityTestsGerman.rmd  24-CustomTestAndBundles.rmd  30-ExamplesGettingStarted.rmd  31-ExamplesAdvanced.rmd  31-ExamplesGraphs.rmd  32-ExamplesAdvanced.rmd  32-ExamplesCreatingCustomTests.rmd  32-ExamplesEditing.Rmd  32-ExamplesGraphs.rmd  33-ExamplesBatchProjects.rmd  33-ExamplesGraphs.rmd  34-ExamplesBatchProjects.rmd  34-ExamplesCreatingCustomTests.rmd  35-ExamplesCreatingCustomTests.rmd  35-ExamplesEditing.Rmd  40-AnalysisNotes.rmd  90-Glossaries.rmd  91-Citations.rmd  93-Author.rmd  ReadabilityStudioManual.xcf  _bookdown.yml  _output.yml  cites.bib  index.Rmd
docs/ReadabilityTestsReference/: 01-Overview.Rmd  README.md  _bookdown.yml  _output.yml  index.Rmd
docs/ShortcutsCheatsheet/: _bookdown.yml  _output.yml  index.Rmd
docs/coding-bible/: 20-CodeInstructions.Rmd  30-Documentation.Rmd  _quarto.yml  code-instructions.qmd  coding-style.qmd  documentation.qmd  index.Rmd  index.qmd  resources.qmd
docs/doxygen/: Doxyfile
docs/lua-5.4/: README
docs/projects/: A Christmas Carol.rsp  Chocolate Eclairs.rsp  Cocoa Desserts (Improved).rsp  Cocoa Desserts.rtf  Consent.rsp  Crawford Sample.rsp  Distribution Documents.rsbp  Eula.rsbp  Eula.rtf  ExclusionWords.txt  LongSentenceSearching.rsp  Press Release.rsp  Press Release.rtf  Statistics Manual Ch. 1.rsbp  Termination Checklist.rsp  The Frog Prince.rsp  The Tale of Peter Rabbit(Split Sentences).rsp  The Tale of Peter Rabbit.rsp  Topics(Grouped).rsbp  Topics2008(Improved) Bundle.rsbp  Topics2008(Less Tests).rsbp  Topics2008More.rsbp  WebHarvester.rsp  buzz words.txt  examples.rsbp
docs/readability-studio-api/: _bookdown.yml  _quarto.yml  index.qmd
docs/readability-studio-manual/: 10-CreatingANewProject.rmd  11-ReviewingStandardProjects.rmd  12-ReviewingBatchProject.rmd  13-CustomizingResults.rmd  14-Publishing.rmd  15-ProgramOptions.rmd  16-AdditionalFeatures.rmd  24-CustomTestAndBundles.rmd  30-ExamplesGettingStarted.rmd  31-ExamplesAdvanced.rmd  32-ExamplesEditing.Rmd  33-ExamplesGraphs.rmd  34-ExamplesBatchProjects.rmd  35-ExamplesCreatingCustomTests.rmd  40-AnalysisNotes.rmd  LegrandOrangeBook.cls  ReadabilityStudioManual.xcf  _bookdown.yml  _output.yml  _quarto-manual.yml  _quarto-online.yml  _quarto-reference.yml  _quarto-sysadmin.yml  _quarto.yml.in  additional-features.qmd  analysis-notes.qmd  cites.bib  creating-a-new-project.qmd  custom-tests-and-bundles.qmd  customizing-results.qmd  examples-advanced.qmd  examples-batch-projects.qmd  examples-creating-custom-tests.qmd  examples-editing.qmd  examples-getting-started.qmd  examples-graphs.qmd  index.Rmd  (+6 more)
examples/: Chocolate Eclairs.txt  Cocoa Desserts (Revised).rtf  Danielson-Bryan.html  Instructional Disclaimer.odt  Job Posting.odt  The Tale of Peter Rabbit.htm
locale/: es.po
resources/: finalize-word-lists.lua
src/: citations.bib.in  version.h.in
tests/: CMakeLists.txt  abbreviationtests.cpp  acronymtests.cpp  articletests.cpp  chartraitstext.cpp  conjunctiontests.cpp  contractiontests.cpp  diacriticstests.cpp  doctokenizetests.cpp  documenttests.cpp  doublewordtests.cpp  englishsyllabletests.cpp  germansyllabletests.cpp  grammartests.cpp  ischartests.cpp  projectrefresh.cpp  read_dictionaries.h  readingtests.cpp  romanizetests.cpp  sentencetests.cpp  spanishsyllabletests.cpp  stringtests.cpp  testingmain.cpp  wordfunctortests.cpp  wordlisttests.cpp  wordtests.cpp
tests/Dictionaries/: EnglishSyllableBaseline.txt  Failing.txt  StopListWestern.txt  WesternAbbr.txt
tests/PREFast/: CMakeLists.txt  rsprefast.cpp
tests/gui-tests/: CMakeLists.txt  messagetests.cpp  testingmain.cpp
tools/: Build CMake Files List.R  build-cmake-files-list.R  files.cmake  images.cmake  words.cmake
(+1699 files in other folders)
